upgraded pom.xml